src/objects/Class_Period__c.object
<CustomObject>
    <description>represents a simple start time and end time that can be named to assist with creation of class schedules/bell schedules, etc.</description>
    <fields>
        <fullName>End_time__c</fullName>
        <description>The end time for this period of classes</description>
        <label>End time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The start time of this period</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The term in which this class period applies. Usually a given school year but nothing in place to stop it from being tied to a semester or individual grading period</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Class Periods</relationshipLabel>
        <relationshipName>Class_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class Period</label>
    <nameField>
        <label>Class Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>